start layout of app and retrieve data

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Moving London",
+  "name": "Moving London - Your one stop service status stop. ",
   "icons": [
     {
       "src": "favicon.ico",
